# k2_pytorch_pipelines_och_modelltr-ning_lucas_lindh

./: .gitignore  README.md  data.dvc  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
src/: dataset.py  evaluate.py  model.py  train.py
